feat: Implement SSE transport for GitHub Project Manager
- Added support for Server-Sent Events (SSE) transport in the GitHub Project Manager.
- Updated environment configuration to include PORT and RUN_SSE parameters.
- Enhanced README with detailed instructions for using both Stdio and SSE transport methods.
- Refactored main entry point to handle transport selection based on environment variables.
- Introduced new server setup for SSE, including message handling and connection management.

--- a/changes/2025-03-18.md
+++ b/changes/2025-03-18.md
@@ -6,3 +6,10 @@
 - Added support for running the GitHub MCP using npx
 - Implemented parameter passing for environment configuration
 - Updated documentation with new usage instructions
+
+## Added transport options documentation to README - 03:45 pm
+
+- Updated README to include details about available transport options (Stdio and SSE)
+- Added documentation for command line parameters to specify transport type and port
+- Included examples of using both transport methods with various configurations
+- Added programmatic usage examples for both transport types
