docs(changeset): Gmail MCP Tools Refactoring and Additional Tools

--- a/changes/2025-03-19.md
+++ b/changes/2025-03-19.md
@@ -80,3 +80,20 @@
 - Updated both stdio and SSE server instances to use the same descriptive name and version
 - Validated changes and built the package to ensure proper functionality
 - Enhanced server identification for client connections and debugging purposes
+
+## Gmail MCP Tools Refactoring and Additional Tools - 4:00 PM
+
+- Refactored the Gmail MCP tools structure for better organization and maintainability
+- Split the monolithic gmail-tools.ts into multiple specialized modules:
+    - base-gmail-tool.ts - Base class with common functionality
+    - email-operations.ts - Send, draft, and read emails
+    - search-operations.ts - Search and filter emails
+    - label-operations.ts - Label management
+    - message-management.ts - Message actions (delete, archive, trash)
+- Implemented additional tools:
+    - gmail_mark_as_read - Mark emails as read
+    - gmail_mark_as_unread - Mark emails as unread
+    - gmail_archive_email - Move emails to archive
+    - gmail_move_to_trash - Move emails to trash
+    - gmail_recover_from_trash - Restore emails from trash
+- Updated README.md to document the new tools
