Update changes log with GSuite issue separation

--- a/changes/2025-03-19.md
+++ b/changes/2025-03-19.md
@@ -111,3 +111,11 @@
 - Updated README.md with comprehensive documentation for batch operations
 - Added code examples and usage instructions for each batch operation
 - Updated the TODO section to mark batch operations as completed
+
+## Separated GSuite MCP Request into Independent Issues - 6:30 PM
+
+- Updated issue #7 to focus solely on Gmail MCP implementation
+- Created new issue #15 for Google Calendar MCP implementation
+- Restructured issue templates to follow standardized format
+- Enhanced clarity by separating concerns between email and calendar functionality
+- Updated related issues sections to link between the two issues
