docs(changeset): Update Slack MCP Bot Token Scopes and Enhance Documentation

--- a/changes/2025-03-19.md
+++ b/changes/2025-03-19.md
@@ -138,3 +138,20 @@
 - Implemented scheduled message posting for future delivery
 - Updated documentation in README.md to reflect new capabilities
 - Reorganized numbering of tools in documentation for clarity
+
+## Updated Slack MCP Bot Token Scopes - 05:45 PM
+
+- Added `chat:write.customize` scope for rich message formatting
+- Added `chat:write.public` scope for posting in public channels without invitation
+- Added `chat:update` scope for the message update functionality
+- Added `chat:delete` scope for the message deletion functionality
+- Added `chat:schedule` scope for the scheduled message posting
+- Updated README.md setup instructions with comprehensive scopes list
+
+## Improved Slack Tool Parameter Schema Descriptions - 06:45 PM
+
+- Updated the Zod schema description for `blocks` parameter with examples and type information
+- Enhanced the `attachments` parameter description with usage context and format examples
+- Added cross-references between tools to avoid duplication in parameter descriptions
+- Clarified the `post_at` timestamp format for scheduled messages
+- Standardized parameter description format across all message management tools
